--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 </script>
  
 
+  
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </head>
 
   
@@ -165,6 +167,13 @@
 
          
 		  <span>Powered by <a href="https://gohugo.io/" target="_blank" rel="external nofollow">Hugo</a> & <a href="https://github.com/liuzc/leaveit" target="_blank" rel="external nofollow">LeaveIt</a></span> 
+          <span id="busuanzi_container_site_pv">
+              本站访问量：<span id="busuanzi_value_site_pv"></span>次
+          </span>
+          &nbsp;
+          <span id="busuanzi_container_site_uv">
+              您是本站第 <span id="busuanzi_value_site_uv"></span> 位访问者
+          </span>
     </div>
 </footer>
 
@@ -181,6 +190,7 @@
 
     
     <script src="/js/vendor_main.min.js" async=""></script>
+
 
 
 
