--- a/index.html
+++ b/index.html
@@ -133,10 +133,14 @@
 
  
 
+<a href="javascript:void(0);" target="_blank" rel="me noopener" onclick="document.getElementById('lightbox').style.display='inline';"><i class="iconfont icon-wechat"></i></a> 
+
 
 <a href="mailto:zijiewang9928@gmail.com" rel="me noopener"><i class="iconfont icon-mail01"></i></a>
 
 
+
+<a href="https://t.me/&#43;8618851901683" rel="me noopener"><i class="iconfont icon-telegram"></i></a>
 
 
 
@@ -146,6 +150,50 @@
 
 
  
+
+
+<style type="text/css">
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .8);
+}
+
+.center {
+    width: 220px;
+    height: 220px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -150px 0 0 -110px;
+}
+
+.center img {
+    width: 220px;
+}
+
+.center i {
+    color: #fff;
+    font-size: 1.5em;
+    position: relative;
+    float: right;
+    top: 0px;
+    right: -20px;
+    cursor: pointer;
+}
+</style>
+
+
+<div id="lightbox" style="display: none" class="lightbox" onclick="document.getElementById('lightbox').style.display='none';">
+    <div class="center">
+        <i class="iconfont icon-close"></i>
+        <img src="/images/me/wechat.png">
+    </div>
+</div>
+
 
 
   
