--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
     "articleSection" : "",
     "name" : "About",
     "headline" : "About",
-    "description" : "@import url(\x27https:\/\/fonts.googleapis.com\/css?family=Katibeh\x26display=swap\x27); .about-info { display: flex; justify-content: space-between; align-items: flex-start; } .about-info-left li { list-style-type: none; } .about-info-right { margin: .5em 1.25em; } .about-info-right img { width: 130px; } .about-info-right .left-ear, .about-info-right .left-hand, .about-info-right .right-ear, .about-info-right .right-hand { display: none; } @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { .about-info { flex-direction: column-reverse; align-items: center; } .about-info-right { margin: auto auto 2em; display: flex; flex-direction: row; justify-content: center; align-items: center; } .",
+    "description" : "@import url(\u0027https:\/\/fonts.googleapis.com\/css?family=Katibeh\u0026display=swap\u0027); .about-info { display: flex; justify-content: space-between; align-items: flex-start; } .about-info-left li { list-style-type: none; } .about-info-right { margin: .5em 1.25em; } .about-info-right img { width: 130px; } .about-info-right .left-ear, .about-info-right .left-hand, .about-info-right .right-ear, .about-info-right .right-hand { display: none; } @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { .about-info { flex-direction: column-reverse; align-items: center; } .about-info-right { margin: auto auto 2em; display: flex; flex-direction: row; justify-content: center; align-items: center; } .",
     "inLanguage" : "zh-cn",
     "author" : "Jonathan Wang",
     "creator" : "Jonathan Wang",
@@ -64,8 +64,8 @@
     "accountablePerson" : "Jonathan Wang",
     "copyrightHolder" : "Jonathan Wang",
     "copyrightYear" : "2020",
-    "datePublished": "2020-01-24 00:35:26 \x2b0800 CST",
-    "dateModified" : "2020-01-24 00:35:26 \x2b0800 CST",
+    "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
+    "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
     "wordCount" : "186",
     "keywords" : [  "Jonathan`s Blog"]
