--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "186",
+    "wordCount" : "203",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -249,7 +249,10 @@
 
 <div class="about-info">
     <div class="about-info-left">
-        <p>Coder, Vimer, CVer.</p>
+        <p> 🧑‍💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.</p>
+        <p> 😑 Having a cute girlfriend.</p>
+        <p> 🏀 Dalla Mavericks Fan.</p>
+        <!-- <p>Coder, Vimer, CVer.</p> -->
         <p>Contact me:</p>
         <ul>
 	<li><p><span class="iconfont icon-mail"></span> Email: <a href="mailto:zijiewang9928@gmail.com"
