--- a/about/index.html
+++ b/about/index.html
@@ -272,7 +272,7 @@
 
 <p>My Github chart:</p>
 
-<p><img src="https://ghchart.rshah.org/GodLovesJonny" alt="Jonathan's Github chart" style="width: 100%;"></p>
+<p><img src="https://ghchart.rshah.org/JonnieWayy" alt="Jonathan's Github chart" style="width: 100%;"></p>
 
     </div>
 </div>
