--- a/about/index.html
+++ b/about/index.html
@@ -249,8 +249,8 @@
 
 <div class="about-info">
     <div class="about-info-left">
-        <p> 🧑‍💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.</p>
-        <p> 😑 Having a cute girlfriend.</p>
+        <p> 💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.</p>
+        <p> 😏 Having a cute girlfriend.</p>
         <p> 🏀 Dalla Mavericks Fan.</p>
         <!-- <p>Coder, Vimer, CVer.</p> -->
         <p>Contact me:</p>
