--- a/about/index.html
+++ b/about/index.html
@@ -257,8 +257,8 @@
         <ul>
 	<li><p><span class="iconfont icon-mail"></span> Email: <a href="mailto:zijiewang9928@gmail.com"
                     rel="nofollow noreferrer" target="_blank">zijiewang9928@gmail.com</a></p></li>
-	<li><p><span class="iconfont icon-github"></span> GitHub: <a href="https://github.com/GodLovesJonny"
-                        rel="nofollow noreferrer" target="_blank">GodLovesJonny</a></p></li>
+	<li><p><span class="iconfont icon-github"></span> GitHub: <a href="https://github.com/JonnieWayy"
+                        rel="nofollow noreferrer" target="_blank">JonnieWayy</a></p></li>
         </ul>
     </div>
     <div class="about-info-right">
