--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     
     <div class="social-links">
       
-<a href="https://github.com/GodLovesJonny" target="_blank" rel="me noopener"><i class="iconfont icon-github"></i></a>
+<a href="https://github.com/JonnieWayy" target="_blank" rel="me noopener"><i class="iconfont icon-github"></i></a>
 
 
 
