--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "203",
+    "wordCount" : "207",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -246,6 +246,7 @@
     }
 </style>
 
+<img style="height:50px;width:100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" height="50px" width="100%" />
 
 <div class="about-info">
     <div class="about-info-left">
@@ -273,6 +274,14 @@
 <p>My Github chart:</p>
 
 <p><img src="https://ghchart.rshah.org/JonnieWayy" alt="Jonathan's Github chart" style="width: 100%;"></p>
+
+<div>
+
+    ![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)
+
+</div>
+
+<img style="height:50px;width:100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" height="50px" width="100%" />
 
     </div>
 </div>
