--- a/about/index.html
+++ b/about/index.html
@@ -246,7 +246,7 @@
     }
 </style>
 
-<img style="height:50px;width:100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" height="50px" width="100%" />
+<p><img style="height: 50px; width: 100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" height="50px" width="100%" /></p>
 
 <div class="about-info">
     <div class="about-info-left">
@@ -277,11 +277,11 @@
 
 <div>
 
-    ![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)
+    [![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)](https://github.com/JonnieWayy)
 
 </div>
 
-<img style="height:50px;width:100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" height="50px" width="100%" />
+<p><img style="height: 50px; width: 100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" height="50px" width="100%" /></p>
 
     </div>
 </div>
