--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "207",
+    "wordCount" : "205",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -246,7 +246,7 @@
     }
 </style>
 
-<p><img style="height: 50px; width: 100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" height="50px" width="100%" /></p>
+<p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" style="height: 50px; width: 100%;" /></p>
 
 <div class="about-info">
     <div class="about-info-left">
@@ -275,13 +275,11 @@
 
 <p><img src="https://ghchart.rshah.org/JonnieWayy" alt="Jonathan's Github chart" style="width: 100%;"></p>
 
-<div>
+<!-- <div> -->
+    <!-- [![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)](https://github.com/JonnieWayy) -->
+<!-- </div> -->
 
-    [![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)](https://github.com/JonnieWayy)
-
-</div>
-
-<p><img style="height: 50px; width: 100%;" src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" height="50px" width="100%" /></p>
+<p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" style="height: 50px; width: 100%;" /></p>
 
     </div>
 </div>
