--- a/about/index.html
+++ b/about/index.html
@@ -247,7 +247,7 @@
 </style>
 
 <!-- <p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" style="height: 50px; width: 100%;" /></p> -->
-<p><img src="/images/about/2.gif" style="height: 50px; width: 100%;" /></p>
+<p><img src="/images/about/2.gif" alt="banner" style="height: 50px; width: 100%;" /></p>
 
 <div class="about-info">
     <div class="about-info-left">
@@ -281,7 +281,7 @@
 <!-- </div> -->
 
 <!-- <p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" style="height: 50px; width: 100%;" /></p> -->
-<p><img src="/images/about/3.gif" style="height: 50px; width: 100%;" /></p>
+<p><img src="/images/about/3.gif" alt="footer" style="height: 50px; width: 100%;" /></p>
 
     </div>
 </div>
