--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "207",
+    "wordCount" : "208",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -247,7 +247,7 @@
 </style>
 
 <!-- <p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/2.gif" style="height: 50px; width: 100%;" /></p> -->
-<p><img src="/images/about/2.gif" alt="banner" style="height: 50px; width: 100%;" /></p>
+<p><img src="/images/about/2.gif" alt="banner" style="height: 60px; width: 100%;" /></p>
 
 <div class="about-info">
     <div class="about-info-left">
@@ -257,10 +257,14 @@
         <!-- <p>Coder, Vimer, CVer.</p> -->
         <p>Contact me:</p>
         <ul>
-	<li><p><span class="iconfont icon-mail"></span> Email: <a href="mailto:zijiewang9928@gmail.com"
-                    rel="nofollow noreferrer" target="_blank">zijiewang9928@gmail.com</a></p></li>
-	<li><p><span class="iconfont icon-github"></span> GitHub: <a href="https://github.com/JonnieWayy"
-                        rel="nofollow noreferrer" target="_blank">JonnieWayy</a></p></li>
+            <li><p><span class="iconfont icon-mail"></span> Email: <a href="mailto:zijiewang9928@gmail.com"
+                        rel="nofollow noreferrer" target="_blank">zijiewang9928@gmail.com</a>
+                </p>
+            </li>
+            <li><p><span class="iconfont icon-github"></span> GitHub: <a href="https://github.com/JonnieWayy"
+                        rel="nofollow noreferrer" target="_blank">JonnieWayy</a>
+                </p>
+            </li>
         </ul>
     </div>
     <div class="about-info-right">
@@ -281,7 +285,7 @@
 <!-- </div> -->
 
 <!-- <p><img src="https://github.com/JonnieWayy/JonnieWayy/blob/master/src/imgs/3.gif" style="height: 50px; width: 100%;" /></p> -->
-<p><img src="/images/about/3.gif" alt="footer" style="height: 50px; width: 100%;" /></p>
+<!-- <p><img src="/images/about/3.gif" alt="footer" style="height: 50px; width: 100%;" /></p> -->
 
     </div>
 </div>
