--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
     "articleSection" : "",
     "name" : "About",
     "headline" : "About",
-    "description" : "@import url(\u0027https:\/\/fonts.googleapis.com\/css?family=Katibeh\u0026display=swap\u0027); .about-info { display: flex; justify-content: space-between; align-items: flex-start; } .about-info-left li { list-style-type: none; } .about-info-right { margin: .5em 1.25em; } .about-info-right img { width: 130px; } .about-info-right .left-ear, .about-info-right .left-hand, .about-info-right .right-ear, .about-info-right .right-hand { display: none; } .navbar-search { width: 10000px%, line-height: 100%, } @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { .about-info { flex-direction: column-reverse; align-items: center; } .about-info-right { margin: auto auto 2em; display: flex; flex-direction: row; justify-content: center; align-items: center; } .",
+    "description" : "@import url(\u0027https:\/\/fonts.googleapis.com\/css?family=Katibeh\u0026display=swap\u0027); .about-info { display: flex; justify-content: space-between; align-items: flex-start; } .about-info-left li { list-style-type: none; } .about-info-right { margin: .5em 1.25em; } .about-info-right img { width: 130px; } .about-info-right .left-ear, .about-info-right .left-hand, .about-info-right .right-ear, .about-info-right .right-hand { display: none; } @media only screen and (min-device-width: 320px) and (max-device-width: 480px) { .about-info { flex-direction: column-reverse; align-items: center; } .about-info-right { margin: auto auto 2em; display: flex; flex-direction: row; justify-content: center; align-items: center; } .",
     "inLanguage" : "zh-cn",
     "author" : "Jonathan Wang",
     "creator" : "Jonathan Wang",
@@ -67,7 +67,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "219",
+    "wordCount" : "221",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -189,11 +189,6 @@
         display: none;
     }
 
-    .navbar-search {
-        width: 10000px%,
-        line-height: 100%,
-    }
-
     @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
         .about-info {
             flex-direction: column-reverse;
@@ -253,6 +248,17 @@
             -o-transform: rotate(45deg) translate(-13px, 15px);
         }
     }
+
+<!--     .navbar-search .gcse-search { -->
+        <!-- padding: 0 8px; -->
+        <!-- max-width: 1000px; -->
+        <!-- width: auto; -->
+        <!-- [> margin: 0 auto; <] -->
+        <!-- [> display: flex; <] -->
+        <!-- [> justify-content: space-between; <] -->
+        <!-- font-size: 1.125em; -->
+        <!-- background-color: red; -->
+<!--     } -->
 </style>
 
 
@@ -292,10 +298,10 @@
 
 <p>Search in the Blog:</p>
 
-<div class="navbar-search">
-    <script async src="https://cse.google.com/cse.js?cx=40875a2625d134f6c"></script>
-    <div class="gcse-search"></div>
-</div>
+<!-- <div class="navbar-search"> -->
+<script async src="https://cse.google.com/cse.js?cx=40875a2625d134f6c"></script>
+<div class="gcse-search"></div>
+<!-- </div> -->
 
 <!-- <div> -->
     <!-- [![Jonathan Wang's GitHub Stats](https://github-readme-stats.vercel.app/api?username=JonnieWayy&count_private=true&show_icons=true&theme=radical)](https://github.com/JonnieWayy) -->
