--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
     "articleSection" : "",
     "name" : "About",
     "headline" : "About",
-    "description" : "💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.\n😏 Having a cute girlfriend.\n🏀 Dallas Mavericks Fan.\nContact me:\nEmail: zijiewang9928@gmail.com GitHub: JonnieWayy \u0026ensp;٩ ▲ ▲ و✧ My Github chart:\nSearch in the Blog:",
+    "description" : "💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.\n😏 Having a cute girlfriend.\n🏀 Dallas Mavericks Fan.\nContact me:\nEmail: zijiewang9928@gmail.com GitHub: JonnieWayy \u0026ensp;٩ ▲ ▲ و✧ Selected Publications:\n🖋 Zijie Wang, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author) 🖋 Zijie Wang, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold.",
     "inLanguage" : "zh-cn",
     "author" : "Jonathan Wang",
     "creator" : "Jonathan Wang",
@@ -68,7 +68,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/jonathanwayy.xyz\/about\/",
-    "wordCount" : "33",
+    "wordCount" : "184",
     "keywords" : [  "Jonathan`s Blog"]
 }
 </script>
@@ -283,8 +283,8 @@
                 </p>
             </li>
         </ul>
-    </div>
-    <div class="about-info-right">
+</div>
+<div class="about-info-right">
 	    <div class="left-hand"><span style="font-size: 0.5em">&ensp;</span>٩</div>
         <div class="left-ear">▲</div>
         <img alt="Mogeko" src="/images/me/avatar.jpg">
@@ -292,6 +292,35 @@
         <div class="right-hand">و<span style="font-size: 0.5em">✧</span></div>
     </div>
 </div>
+
+<p>Selected Publications:</p>
+<ul style="list-style-type: none">
+    <li>
+        <p>
+        🖋 <b>Zijie Wang</b>, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author)
+        </p>
+    </li>
+    <li>
+        <p>
+        🖋 <b>Zijie Wang</b>, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author)
+        </p>
+    </li>
+    <li>
+        <p>
+        🖋 <b>Zijie Wang</b>, et al. 2022. SUM: Serialized Updating and Matching for text-based person retrieval. Knowledge-Based Systems 248 (2022), 108891. (IF=8.139, First Author)
+        </p>
+    </li>
+    <li>
+        <p>
+        🖋 Aichun Zhu, <b>Zijie Wang</b>, et al. 2021. DSSL: Deep Surroundings-person Separation Learning for Text-based Person Retrieval. In Proceedings of the 29th ACM International Conference on Multimedia. 209–217. (CCF A, Oral, First Student Author)
+        </p>
+    </li>
+    <li>
+        <p>
+        🖋 <b>Zijie Wang</b>, et al. 2021. AMEN: Adversarial Multi-space Embedding Network for Text-Based Person Re-identification. In Chinese Conference on Pattern Recognition and Computer Vision (PRCV). Springer, 462–473. (First Author)
+        <p>
+    </li>
+</ul>
 
 <p>My Github chart:</p>
 
