--- a/about/index.html
+++ b/about/index.html
@@ -307,7 +307,7 @@
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. SUM: Serialized Updating and Matching for text-based person retrieval. Knowledge-Based Systems 248 (2022), 108891. (IF=8.139, First Author)
+        🖋 <b>Zijie Wang</b>, et al. 2022. SUM: Serialized Updating and Matching for Text-based Person Retrieval. Knowledge-Based Systems 248 (2022), 108891. (IF=8.139, First Author)
         </p>
     </li>
     <li>
