--- a/about/index.html
+++ b/about/index.html
@@ -297,27 +297,27 @@
 <ul style="list-style-type: none">
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author)
+        🖋 <b>Zijie Wang</b>, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (<b>CCF A, First Author</b>)
         </p>
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author)
+        🖋 <b>Zijie Wang</b>, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold. Accepted by the 30th ACM International Conference on Multimedia. (<b>CCF A, First Author</b>)
         </p>
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. SUM: Serialized Updating and Matching for Text-based Person Retrieval. Knowledge-Based Systems 248 (2022), 108891. (IF=8.139, First Author)
+        🖋 <b>Zijie Wang</b>, et al. 2022. SUM: Serialized Updating and Matching for Text-based Person Retrieval. Knowledge-Based Systems 248 (2022), 108891. (<b>IF=8.139, First Author</b>)
         </p>
     </li>
     <li>
         <p>
-        🖋 Aichun Zhu, <b>Zijie Wang</b>, et al. 2021. DSSL: Deep Surroundings-person Separation Learning for Text-based Person Retrieval. In Proceedings of the 29th ACM International Conference on Multimedia. 209–217. (CCF A, Oral, First Student Author)
+        🖋 Aichun Zhu, <b>Zijie Wang</b>, et al. 2021. DSSL: Deep Surroundings-person Separation Learning for Text-based Person Retrieval. In Proceedings of the 29th ACM International Conference on Multimedia. 209–217. (<b>CCF A, Oral, First Student Author</b>)
         </p>
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2021. AMEN: Adversarial Multi-space Embedding Network for Text-Based Person Re-identification. In Chinese Conference on Pattern Recognition and Computer Vision (PRCV). Springer, 462–473. (First Author)
+        🖋 <b>Zijie Wang</b>, et al. 2021. AMEN: Adversarial Multi-space Embedding Network for Text-Based Person Re-identification. In Chinese Conference on Pattern Recognition and Computer Vision (PRCV). Springer, 462–473. (<b>First Author</b>)
         <p>
     </li>
 </ul>
