--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@
     "articleSection" : "",
     "name" : "About",
     "headline" : "About",
-    "description" : "🔭 Postgraduate at Njtech University.\n💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.\n🏀 Dallas Mavericks Fan.\nContact me:\nEmail: zijiewang9928@gmail.com GitHub: JonnieWayy \u0026ensp;٩ ▲ ▲ و✧ Selected Publications:\n🖋 Zijie Wang, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (CCF A, First Author) 🖋 Zijie Wang, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold.",
+    "description" : "🔭 Postgraduate at Njtech University.\n💻 Coder, Vimer, CVer, Zealous ArchLinux Lover.\n🏀 Dallas Mavericks Fan.\nContact me:\nEmail: zijiewang9928@gmail.com GitHub: JonnieWayy \u0026ensp;٩ ▲ ▲ و✧ Selected Publications:\n🖋 Zijie Wang, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. In Proceedings of the 30th ACM International Conference on Multimedia. 5314-5322. (CCF A, First Author) 🖋 Zijie Wang, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold.",
     "inLanguage" : "zh-cn",
     "author" : "Zijie Wang",
     "creator" : "Zijie Wang",
@@ -68,7 +68,7 @@
     "datePublished": "2020-01-24 00:35:26 \u002b0800 CST",
     "dateModified" : "2020-01-24 00:35:26 \u002b0800 CST",
     "url" : "http:\/\/wzj.life\/about\/",
-    "wordCount" : "215",
+    "wordCount" : "221",
     "keywords" : [  "Zijie Wang`s Blog"]
 }
 </script>
@@ -298,12 +298,12 @@
 <ul style="list-style-type: none">
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. Accepted by the 30th ACM International Conference on Multimedia. (<b>CCF A, First Author</b>)
+        🖋 <b>Zijie Wang</b>, et al. 2022. CAIBC: Capturing All-round Information Beyond Color for Text-based Person Retrieval. In Proceedings of the 30th ACM International Conference on Multimedia. 5314-5322. (<b>CCF A, First Author</b>)
         </p>
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold. Accepted by the 30th ACM International Conference on Multimedia. (<b>CCF A, First Author</b>)
+        🖋 <b>Zijie Wang</b>, et al. 2022. Look Before You Leap: Improving Text-based Person Retrieval by Learning A Consistent Cross-modal Common Manifold. In Proceedings of the 30th ACM International Conference on Multimedia. 1984-1992. (<b>CCF A, First Author</b>)
         </p>
     </li>
     <li>
@@ -323,7 +323,7 @@
     </li>
     <li>
         <p>
-        🖋 <b>Zijie Wang</b>, et al. 2021. AMEN: Adversarial Multi-space Embedding Network for Text-Based Person Re-identification. In Chinese Conference on Pattern Recognition and Computer Vision (PRCV). Springer, 462–473. (<b>First Author</b>)
+        🖋 <b>Zijie Wang</b>, et al. 2021. AMEN: Adversarial Multi-space Embedding Network for Text-Based Person Re-identification. In Chinese Conference on Pattern Recognition and Computer Vision (PRCV). Springer, 462–473. (<b>CCF C, First Author</b>)
         <p>
     </li>
 </ul>
